src/test/run-pass/parse-fail.rs



// -*- rust -*-
fn dont_call_me() { fail; log(debug, 1); }

fn main() { }
